--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "grunt": "^1.3.0",
+    "grunt-aws": "^0.7.1"
   }
 }
